kubernetes/platform/ml/mlflow/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: ml
spec:
  selector:
    app.kubernetes.io/name: mlflow
  ports:
    - name: http
      port: 5000
      targetPort: http
