kubernetes/platform/ml/mlflow/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mlflow
  namespace: ml
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - mlflow.timourhomelab.org
  rules:
    - backendRefs:
        - name: mlflow
          port: 5000
